# Cource_5

./: pyproject.toml  readme.md
src/: dbmanager.py  employer.py  main.py  vacancy.py
src/parsers/: hh.py  hh_employers.py  hh_vacancies.py
src/sql/: database.ini  db_create.sql  db_create_pattern_table.sql  db_create_tables.sql  db_drop_all.sql  db_insert_into_employers.sql  db_insert_into_pattern_table.sql  db_insert_into_salaries.sql  db_insert_into_vacancies.sql  db_is_tables_exists.sql  db_select_all_vacancies.sql  db_select_avg_salary.sql  db_select_companies_and_vacancies.sql  db_select_vacancies_with_higher_salary.sql  db_select_vacancies_with_keyword.sql  dbmanager.py  main_test.py
